version 3.6.0 / 2020-XX-YY

  libcw:

  - enabling ALSA's configuration of HW period size.

    libcw's ALSA code now tries to configure HW period size to be
    smaller than in previous versions of code. Normally the period
    size could be in range of hundreds of frames, now it's possible to
    have the period size of tens, or low hundreds of frames.

    Decreased period size should lead to better behaviour of ALSA's
    writei() function: the function should now properly block during
    write of samples to ALSA handle in all circumstances.

    Correct blocking behaviour of writei() should lead to correct
    behaviour of libcw's internal keying mechanism, responsible
    e.g. for calling keying callbacks registered by programs using
    libcw (such as cwdaemon). Such callbacks will be now called at
    proper time intervals that match duration of enqueued
    dots/dashes/spaces.

    Initial report of incorrect behaviour, initial debugging, and
    confirmation of a fix come from Matthew M5EVT. Thanks Matthew!

  - modifying PulseAudio parameters to decrease XRUNS and improve
    behaviour of callback registered by client code in library.

    Integrating these two commits from Matthew M5EVT
    https://github.com/m5evt/unixcw-3.5.1/commit/2d5491a461587ac4686e2d1b897619c98be05c9e
    https://github.com/m5evt/unixcw-3.5.1/commit/c86785b595a6d711aae915150df2ccb848ace05c

    The result is a better behaviour of PulseAudio sound sink, a bit
    similar to ALSA improvements mentioned above. Thanks again,
    Matthew!

  - Behaviour of cw_lookup_phonetic() library function has been modified: the
    function now accepts NULL as a second argument (output buffer).

  - Several items in libcw_debug.h are marked as deprecated. These items
    should be used only internally, during development of libcw, and should
    not be used by client code. They will be removed from the header in the
    future.
