@@ -114,7 +114,7 @@ static int          cw_pa_dlsym_internal(cw_pa_handle_t * cw_pa);
 static cw_ret_t     cw_pa_open_and_configure_sound_device_internal(cw_gen_t * gen);
 static void         cw_pa_close_sound_device_internal(cw_gen_t * gen);
 static cw_ret_t     cw_pa_write_buffer_to_sound_device_internal(cw_gen_t * gen);
-static const char * cw_pick_device_name_internal(const char * client_device_name, const char * default_device_name);
+static const char * cw_pick_device_name_internal(const char * client_device_name, const char * default_device_name); /* TODO: use the function in other sound systems too. */
 
 
 
@@ -301,7 +301,7 @@ static pa_simple * cw_pa_simple_new_internal(const char * device_name, const cha
 {
 	pa_sample_spec spec = { 0 };
 	spec.format = CW_PA_SAMPLE_FORMAT;
-	spec.rate = 44100;
+	spec.rate = 44100; /* TODO: why this value is hardcoded? */
 	spec.channels = 1;
 
 	const char * dev = cw_pick_device_name_internal(device_name, CW_DEFAULT_PA_DEVICE);
@@ -310,6 +310,7 @@ static pa_simple * cw_pa_simple_new_internal(const char * device_name, const cha
 	pa_buffer_attr attr = { 0 };
 	attr.prebuf    = (uint32_t) -1;
 	attr.fragsize  = (uint32_t) -1;
+	/* TODO: notice that the values are smaller than in the URL above. */
 	attr.tlength   = g_cw_pa.pa_usec_to_bytes(10 * 1000, &spec);
 	attr.minreq    = g_cw_pa.pa_usec_to_bytes(0, &spec);
 	attr.maxlength = g_cw_pa.pa_usec_to_bytes(10 * 1000, &spec);
