@@ -2,6 +2,10 @@ version 3.6.0 / 2020-XX-YY
 
   libcw:
 
+  - libcw no longer uses signals (and SIGALRM in particular) for any internal
+    purpose. Internal communication between generator and queue has been
+    reimplemented using other mechanism.
+
   - enabling ALSA's configuration of HW period size.
 
     libcw's ALSA code now tries to configure HW period size to be
